--- a/Dice_Game/styles.css
+++ b/Dice_Game/styles.css
@@ -1,5 +1,5 @@
 .container {
-  width: 70%;
+  width: 50%;
   margin: auto;
   text-align: center;
 }
@@ -11,7 +11,7 @@
 }
 
 body {
-  background-color: #393E46;
+  background-color: #1b262c;
 }
 
 h1 {
@@ -19,22 +19,22 @@ h1 {
   font-family: 'Lobster', cursive;
   text-shadow: 5px 0 #232931;
   font-size: 8rem;
-  color: #4ECCA3;
+  color: #f79071;
 }
 
 p {
   font-size: 2rem;
-  color: #4ECCA3;
+  color: #f79071;
   font-family: 'Indie Flower', cursive;
 }
 
 img {
-  width: 80%;
+  width: 70%;
 }
 
 footer {
   margin-top: 5%;
-  color: #EEEEEE;
+  color: #cff1ef;
   text-align: center;
   font-family: 'Indie Flower', cursive;
 
